# ToDo-Console-app

./: README.md  pyproject.toml
history/prompts/001-todo-cli-core/: 001-create-todo-cli-spec.spec.prompt.md  002-create-implementation-plan.plan.prompt.md  003-generate-implementation-tasks.tasks.prompt.md  004-implement-todo-cli-core.green.prompt.md
history/prompts/constitution/: 001-initial-project-constitution.constitution.prompt.md
specs/001-todo-cli-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-core/checklists/: requirements.md
specs/001-todo-cli-core/contracts/: cli-commands.md
src/: __init__.py
src/cli/: app.py  commands.py
src/models/: task.py
src/services/: __init__.py  todo_service.py
src/storage/: __init__.py  in_memory_storage.py
